main/default/objects/Navigator__c/Navigator__c.object-meta.xml
<CustomObject>
    <label>Basecamp</label>
    <nameField>
        <label>Basecamp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basecamps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>