main/default/objects/Navigator__c/fields/About_Description__c.field-meta.xml
<CustomField>
    <fullName>About_Description__c</fullName>
    <label>About Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>