main/default/objects/Navigator__c/fields/About_Image_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>About_Image_Video_Link__c</fullName>
    <label>About Image/Video Link</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>