main/default/objects/Navigator__c/fields/About_Label__c.field-meta.xml
<CustomField>
    <fullName>About_Label__c</fullName>
    <label>About Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>