main/default/objects/Navigator__c/fields/Add_Live_Chat__c.field-meta.xml
<CustomField>
    <fullName>Add_Live_Chat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Live Chat</label>
    <type>Checkbox</type>
</CustomField>