main/default/objects/Navigator__c/fields/App_Logo__c.field-meta.xml
<CustomField>
    <fullName>App_Logo__c</fullName>
    <description>Renders the Navigator Logo</description>
    <label>Company Mark Link</label>
    <type>Url</type>
</CustomField>