main/default/objects/Navigator__c/fields/AWS_Link__c.field-meta.xml
<CustomField>
    <fullName>AWS_Link__c</fullName>
    <description>URL for AWS Sumerian. If this field is blank the mascot image is hidden.</description>
    <inlineHelpText>URL for AWS Sumerian. If this field is blank the mascot image is hidden.</inlineHelpText>
    <label>AWS Link</label>
    <type>Url</type>
</CustomField>