main/default/objects/Navigator__c/fields/Basecamp_Description__c.field-meta.xml
<CustomField>
    <fullName>Basecamp_Description__c</fullName>
    <label>Basecamp Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>