main/default/objects/Navigator__c/fields/Branding_Logo__c.field-meta.xml
<CustomField>
    <fullName>Branding_Logo__c</fullName>
    <description>Renders the Company Logo</description>
    <label>Campaign Logo Link</label>
    <type>Url</type>
</CustomField>