main/default/objects/Navigator__c/fields/Change_Agent__c.field-meta.xml
<CustomField>
    <fullName>Change_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the details from the Change Agent Contact record.</description>
    <inlineHelpText>Displays the details from the Change Agent Contact record.</inlineHelpText>
    <label>Change Agent/Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Navigators</relationshipName>
    <type>Lookup</type>
</CustomField>