main/default/objects/Navigator__c/fields/Change_Agent_Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Agent_Lead_Description__c</fullName>
    <label>Change Agent/Lead Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>