main/default/objects/Navigator__c/fields/Change_Agent_Lead_Label__c.field-meta.xml
<CustomField>
    <fullName>Change_Agent_Lead_Label__c</fullName>
    <label>Change Agent/Lead Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>