main/default/objects/Navigator__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of the Navigator</description>
    <label>Basecamp Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>