main/default/objects/Navigator__c/fields/Enable_Token_Login__c.field-meta.xml
<CustomField>
    <fullName>Enable_Token_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Token Login</label>
    <type>Checkbox</type>
</CustomField>