main/default/objects/Navigator__c/fields/Footer_Image__c.field-meta.xml
<CustomField>
    <fullName>Footer_Image__c</fullName>
    <description>Renders the Footer Image.</description>
    <inlineHelpText>Renders the Footer Image.</inlineHelpText>
    <label>Footer Image</label>
    <type>Url</type>
</CustomField>