main/default/objects/Navigator__c/fields/Header_Image__c.field-meta.xml
<CustomField>
    <fullName>Header_Image__c</fullName>
    <description>Renders the Header Image</description>
    <label>Basecamp Hero Image Link</label>
    <type>Url</type>
</CustomField>