main/default/objects/Navigator__c/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <description>Text to display in the Header/Banner.</description>
    <label>Basecamp Subtitle</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>