main/default/objects/Navigator__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipName>Navigators</relationshipName>
    <type>Lookup</type>
</CustomField>