main/default/objects/Navigator__c/fields/Landing_Page_Hero_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Hero_Image_Link__c</fullName>
    <label>Landing Page Hero Image Link</label>
    <type>Url</type>
</CustomField>