main/default/objects/Navigator__c/fields/Live_Call_Button__c.field-meta.xml
<CustomField>
    <fullName>Live_Call_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display Live Call button on My Change Agent section when checkbox is selected</description>
    <inlineHelpText>Display Live Call button on My Change Agent section when checkbox is selected</inlineHelpText>
    <label>Add Live Call Button</label>
    <type>Checkbox</type>
</CustomField>