main/default/objects/Navigator__c/fields/Live_Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Live_Call_Number__c</fullName>
    <description>Navigator Support Call Number</description>
    <inlineHelpText>Navigator Support Call Number</inlineHelpText>
    <label>Live Call Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>