main/default/objects/Navigator__c/fields/Login_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_Page_URL__c</fullName>
    <label>Basecamp Landing Page Link</label>
    <type>Url</type>
</CustomField>