main/default/objects/Navigator__c/fields/Mascot_Image__c.field-meta.xml
<CustomField>
    <fullName>Mascot_Image__c</fullName>
    <description>Renders the Mascot Image that floats on the lower right side of the screen.</description>
    <inlineHelpText>Renders the Mascot Image that floats on the lower right side of the screen.</inlineHelpText>
    <label>Mascot Image Link</label>
    <type>Url</type>
</CustomField>