main/default/objects/Navigator__c/fields/Mascot_Message__c.field-meta.xml
<CustomField>
    <fullName>Mascot_Message__c</fullName>
    <defaultValue>&quot;Hello!&quot;</defaultValue>
    <description>Mascot dialogue message.</description>
    <inlineHelpText>Mascot dialogue message.</inlineHelpText>
    <label>Mascot Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>