main/default/objects/Navigator__c/fields/Menu_Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Menu_Configuration_JSON__c</fullName>
    <label>Menu Configuration JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>