main/default/objects/Navigator__c/fields/My_Calendar_Label__c.field-meta.xml
<CustomField>
    <fullName>My_Calendar_Label__c</fullName>
    <defaultValue>&quot;My Calendar&quot;</defaultValue>
    <label>My Calendar Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>