main/default/objects/Navigator__c/fields/My_Calendar_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Calendar_Sort_Order__c</fullName>
    <defaultValue>4</defaultValue>
    <label>My Calendar Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>