main/default/objects/Navigator__c/fields/My_Events_Label__c.field-meta.xml
<CustomField>
    <fullName>My_Events_Label__c</fullName>
    <defaultValue>&quot;My Events&quot;</defaultValue>
    <label>My Events Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>