main/default/objects/Navigator__c/fields/My_Events_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Events_Sort_Order__c</fullName>
    <defaultValue>2</defaultValue>
    <label>My Events Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>