main/default/objects/Navigator__c/fields/My_Journey_Label__c.field-meta.xml
<CustomField>
    <fullName>My_Journey_Label__c</fullName>
    <defaultValue>&quot;My Journey&quot;</defaultValue>
    <label>My Journey Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>