main/default/objects/Navigator__c/fields/My_Journey_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Journey_Sort_Order__c</fullName>
    <defaultValue>3</defaultValue>
    <label>My Journey Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>