main/default/objects/Navigator__c/fields/My_Navigator_Label__c.field-meta.xml
<CustomField>
    <fullName>My_Navigator_Label__c</fullName>
    <defaultValue>&quot;My Basecamp&quot;</defaultValue>
    <label>My Basecamp Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>