main/default/objects/Navigator__c/fields/My_Navigator_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Navigator_Sort_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>My Basecamp Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>