main/default/objects/Navigator__c/fields/Navigator_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Navigator_End_Date__c</fullName>
    <label>Basecamp End Date</label>
    <type>Date</type>
</CustomField>