main/default/objects/Navigator__c/fields/Navigator_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Publish_Date__c</fullName>
    <label>Basecamp Publish Date</label>
    <type>Date</type>
</CustomField>