main/default/objects/Navigator__c/fields/Navigator_Sign_In__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Sign_In__c</fullName>
    <label>Basecamp Sign In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Sign In</fullName>
                <default>true</default>
                <label>Email Sign In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>