main/default/objects/Navigator__c/fields/Schedule_Video_Call_Button__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Video_Call_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display Schedule a Video Call button on My Change Agent section when checkbox is selected</description>
    <inlineHelpText>Display Schedule a Video Call button on My Change Agent section when checkbox is selected</inlineHelpText>
    <label>Add Schedule Video Call Button</label>
    <type>Checkbox</type>
</CustomField>