main/default/objects/Navigator__c/fields/Theme_Color_1__c.field-meta.xml
<CustomField>
    <fullName>Theme_Color_1__c</fullName>
    <defaultValue>&quot;rgb(0,23,51)&quot;</defaultValue>
    <description>Theme Color 1</description>
    <inlineHelpText>Theme Color 1</inlineHelpText>
    <label>Theme Color 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>