main/default/objects/Navigator__c/fields/Theme_Color_2__c.field-meta.xml
<CustomField>
    <fullName>Theme_Color_2__c</fullName>
    <defaultValue>&quot;rgb(0,131,193)&quot;</defaultValue>
    <description>Theme Color 2</description>
    <inlineHelpText>Theme Color 2</inlineHelpText>
    <label>Theme Color 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>