main/default/objects/Navigator__c/fields/Theme_Color_3__c.field-meta.xml
<CustomField>
    <fullName>Theme_Color_3__c</fullName>
    <defaultValue>&quot;rgb(220,220,220)&quot;</defaultValue>
    <description>Theme Color 3</description>
    <inlineHelpText>Theme Color 3</inlineHelpText>
    <label>Theme Color 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>