main/default/objects/Navigator__c/fields/Video_Call_Calendar_Invite_Information__c.field-meta.xml
<CustomField>
    <fullName>Video_Call_Calendar_Invite_Information__c</fullName>
    <label>Video Call Calendar Invite Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>