main/default/objects/Navigator__c/fields/Video_Call_Calendar_Invite_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_Call_Calendar_Invite_Title__c</fullName>
    <label>Video Call Calendar Invite Title</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>