main/default/objects/Navigator__c/fields/Widget_Layout__c.field-meta.xml
<CustomField>
    <fullName>Widget_Layout__c</fullName>
    <label>Widget Layout</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
                <default>true</default>
                <label>Classic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>